--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ license = "MIT"
 description = "Assist your memo life to improve your productivity"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-redme = "README.md"
+readme = "README.md"
 
 keywords = ["rusmo","markdown","memo"]
 categories = ["command-line-interface"]
